src/objects/IDOL_API_Config__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>API_Key__c</fullName>
        <label>API Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Logging__c</fullName>
        <defaultValue>false</defaultValue>
        <label>API Logging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>API_URL__c</fullName>
        <defaultValue>&quot;https://api.idolondemand.com/1/api&quot;</defaultValue>
        <label>API URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>API_Version__c</fullName>
        <defaultValue>&quot;v1&quot;</defaultValue>
        <label>API Version</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>IDOL API Config</label>
</CustomObject>